# footron-build-manager

./: .gitignore  example-config.toml  setup.cfg
footron_build_manager/: config.py  constants.py  data.py  server.py
