[metadata]
name = footron-build-manager
version = 0.1
url = https://github.com/BYU-PCCL/footron-build-manager
license = MIT
author = BYU PCCL

[options]
packages = find:
python_requires = >=3.8
install_requires =
    fastapi
    uvicorn[standard]
    pydantic
    PyGithub
    tomli
    xdg
    requests
